<resources>
    <string name="app_name">Services</string>
    <string name="section_format">Section : %1$d</string>
    <string name="topic1">Serve on Door, one of the largest Service provider
        companies in India, evolved from a small scale business of Iniesta
        Webtech Solution established in 2019 and functioned for the shifting of household goods
        , Beauty and Spa, Doctor consultant, Tax services, Repairing (All type), etc.
        Incepted by vision andhard efforts of Mr. Satyam Shukla, the company moved ahead towards
        the path of growth. This evolution takes place on the solid grounds of expansion in terms
        of proficient and customer-satisfactory services. We have followed the principles of
        growth ever since our inception.</string>
    <string name="topic2">Get Service at your home comfortably\n\nService by professional and experienced Beauticians\n\nFixed price for every type of service(no extra charges)\n\nAll type of brands according to your choice\n
    </string>
    <string name="beauty_spa"><![CDATA[BEAUTY & SPA]]></string>
    <string name="topic3">
        1)First of all select type of gender.\n\n
        2)Select a saloon service.\n\n
        3)Select a sub service you want.\n\n
        4)Select date &amp; time slot according to your convenience.\n\n
        5)Our professional will get in touch with you on given time slot.\n\n
        6)Relax &amp; enjoy Hassle-free service at home.\n
    </string>
    <string name="carpenter_topic1">
        Serve on Door, one of the largest Service Provider companies in India, evolved from a small scale business of Iniesta Webtech Solution established in 2019 and functioned for the shifting of household goods, Beauty &amp; Spa, Doctor consultant, Tax services, Repairing (All type), etc. Incepted by vision and hard efforts of Mr. Satyam Shukla, the company moved ahead towards the path of growth. This evolution takes place on the solid grounds of expansion in terms of proficient and customer-satisfactory services. We have followed the principles of growth ever since our inception.
    </string>
    <string name="carpenter_topic2">
        1)Get repair &amp;amp Service at home.\n\n2)Customer Protection.\n\n3)Fixed Price for space Parts.\n\n4)Service by Professional Repairman\n\n5)Guaranteed Customer Satisfaction\n\n
    </string>
    <string name="carpenter_topic3">
        1)First of all select type of carpenter services.\n\n2)Select date on which date you want our carpenter service.\n\n3)Select best time-slot according to your convenience.\n\n4)Our professional will get in touch with you on given date &amp; time.\n\n5)Get repair &amp; Service Hassle-free at home\n
    </string>
    <string name="carpenter_topic4">
        1)Price may vary according if extra needed spare(cost of spares will be fixed, no hidden &amp; extra cost).\n\n2)Inspection charge will be ₹149.\n\n3)You are free to disscuss the scenario with our professionals who will provide you quotation withou any hidden charges.\n\n4)All the payment will be marked after service.\n
    </string>
    <string name="topic4">
        1.)Price may vary according to your requirement or if services varies.\n\n2.)You don\'t need to provide any disposable items like wipes &amp; towels, because they bring along.\n\n3.)Try to choose combo packs to get discounts &amp; profits.\n\n4.)If you have any type of elergy or skin problems, please tell to our professionals before starting the service.\n\n5.)Some of the process(like wax, threading) are painful, our professionals always do their best to decrease the level of pain.\n\n6.)If you want to use your own brand in service, tell us before confirming the appointment\n
    </string>
    <string name="beauty_topic1">
        Serve on Door, one of the largest Service provider companies in India, evolved from a small scale business of Iniesta Webtech Solution established in 2019 and functioned for the shifting of household goods, Beauty &amp; Spa, Doctor consultant, Tax services, Repairing (All type), etc. Incepted by vision and hard efforts of Mr. Satyam Shukla, the company moved ahead towards the path of growth. This evolution takes place on the solid grounds of expansion in terms of proficient and customer-satisfactory services. We have followed the principles of growth ever since our inception.
    </string>
    <string name="beauty_topic2">
        1)Get Service at your home comfortably.\n\n
        2)Service by professional &amp; Experienced Beautician.\n\n
        3)Fixed price for every type of service(no extra charges).\n\n
        4)All type of brand according to your choice.\n
    </string>
    <string name="beauty_topic3">
        1)First of all select type of gender.\n\n
        2)Select a saloon service.\n\n
        3)Select a sub service you want.\n\n
        4)Select date &amp; time slot according to your convenience.\n\n
        5)Our professional will get in touch with you on given time slot.\n\n
        6)Relax &amp; enjoy Hassle-free service at home.\n
    </string>
    <string name="beauty_topic4">
        1)Price may vary according to your requirement or if services varies.\n\n
        2)You don\'t need to provide any disposable items like wipes &amp; towels, because they bring along.\n\n
        3)Try to choose combo packs to get discounts &amp; profits.\n\n4)If you have any type of allergy or skin problems, please tell to our professionals before starting the service.\n\n
        5)Some of the process(like wax, threading) are painful, our professionals always do their best to decrease the level of pain.\n\n
        6)If you want to use your own brand in service, tell us before confirming the appointment.\n\n
    </string>
    <string name="packages_topic1">
        Serve on Door, one of the largest service provider companies in India, evolved from a small scale business of Iniesta Webtech Solution established in 2019 and functioned for the shifting of household goods, Beauty &amp; Spa, Doctor consultant, Tax services, Repairing (All type), etc. Incepted by vision and hard efforts of Mr. Satyam Shukla, the company moved ahead towards the path of growth. This evolution takes place on the solid grounds of expansion in terms of proficient and customer-satisfactory services. We have followed the principles of growth ever since our inception.
    </string>
    <string name="packages_topic2">
        1)Damage Free Shifting\n\n2)High quality bubble wraps used.\n\n3)Shift safe with SERVE on Door.\n\n4)We Provide Packers after screening.\n\n5)Trusted Professionals\n\n6)Guaranteed Customer Satisfaction.\n\n
    </string>
    <string name="packages_topic3">1)Share Your Details about shifting Goods.\n\n2)Choose date, on which date you want our Packers &amp; Movers Service.\n\n3)Our Professional Packers will pack your goods professionally so that, your goods reach at your destination safe.\n\n4)whithout any hidden cahrge or extra charge our packers will deliver your goods at destination.\n\n
    </string>
    <string name="packages_topic4">1)Price may vary according to your location without any Hidden &amp; Extra charges.\n\n2)Try to collect your all goods at one place so that our packers can pack your goods easily.\n\n3)Our packers will take all the responsiblities for the complete &amp; safe packaging.\n\n4)Our packers will also take all responsiblities for Loading &amp; Unloading. They will get all the neccessary packing materials &amp; manpower required for the work.\n\n
    </string>
    <string name="AC_topic1">Serve on Door, one of the largest Logistics companies in India, evolved from a small scale business of Iniesta Webtech Solution established in 2019 and functioned shifting of household goods, Beauty &amp; Spa, Doctor consultant, Tax services, Repairing (All type), etc. Incepted by vision and hard efforts of Mr. Satyam Shukla, the company moved ahead towards the path of growth. This evolution takes place on the solid grounds of expansion in terms of proficient and customer-satisfactory services. We have followed the principles of growth ever since our inception.</string>
    <string name="AC_topic2">1)Get repair &amp; services at home.\n\n2)Customer Protection.\n\n3)Service by experienced repair professionals.\n\n4)Guaranteed Customer satisfaction.\n\n5)Service at your choosen time-slot.\n\n
    </string>
    <string name="AC_topic3">1)Choose the type of AC(Window, Split)\n\n2)Select the service you need from our AC Repair service.\n\n3)Select date on which date you want service.\n\n4)Select a best time-slot according to your convenience.\n\n5)Get repair &amp; service Hassle-free at home.\n\n
    </string>
    <string name="AC_topic4">1)Price may vary after screening depending on the condition of appliances.\n\n2)Some serices in AC repairing is dengerous, try to avoid present in servicing room(like Gas Charging).\n\n3)Repair cost depend upon the condition of appliance, quotation will be provided after inspection\n\n4)Always inform the technician of recent service &amp; repair.\n\n5)Technician may bring along a helper to the service.\n\n
    </string>
    <string name="fitness_topic1">Serve on Door, one of the largest service provider companies in India, evolved from a small scale business of Iniesta Webtech Solution established in 2019 and functioned for the shifting of household goods, Beauty &amp; Spa, Doctor consultant, Tax services, Repairing (All type), etc. Incepted by vision and hard efforts of Mr. Satyam Shukla, the company moved ahead towards the path of growth. This evolution takes place on the solid grounds of expansion in terms of proficient and customer-satisfactory services. We have followed the principles of growth ever since our inception.</string>
    <string name="fitness_topic2">
        1)Doorstep service\n\n
        2)Trained to operate in home environment\n\n
        3)Experienced and verified trainers\n\n
        4)All trainers rated 4 and above\n\n
        5)Book a trial session before buying a package Trial sessions available at 99/- only\n\n
        6)Trial sessions available before purchase\n
    </string>
    <string name="fitness_topic3">
        1)For whom Male/Female/Couple/Group\n\n
        2)Book your preferred time slot\n\n
        3)Choose date and time as per your convenience\n\n
        4)Hassle free service\n\n
    </string>
    <string name="fitness_topic4">
        Sweat, dehydration, restlessness, anxiety, lethargy and lack of energy are common symptoms in the summer season. But if you keep some precautions in this season then lethargy can be run away. For this, keeping your fitness routine balanced with weather-friendly diet. Learn how to be in this season and how to keep yourself fit and healthy\n\n
        Must have glucose, peppermint all the time in the house and peppermint, and keep it common\n\n
        Do not drink the refrigerated cold water immediately after coming out from the heat. Instead, give priority to water from jar, mats or wheels\n\n
        If you are craving of sweet, then eat apple, gulka or petha of apple, amla or vine, instead of the sweet sweets of the market\n\n
        Eat fresh food and stay healthy. Just eat cooked food in summer, because in this season vegetables (especially tomato-potato vegetables), pulses are quickly spoiled. Eat well-cooked meals and stay away from high food\n\n
        \t1. Set The Groundwork\n
        \t2. Position Yourself\n
        \t3. Be Approachable\n
        \t4. Give The Eyes A Workout, Ears A Rest\n
        \t5. Pick Wisely\n
        For More details Hire Consultant\n
    </string>
</resources>