<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">


    <android.support.v7.widget.CardView
        android:id="@+id/topcard"
        android:layout_width="367dp"
        android:layout_height="230dp"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey_300">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignStart="@+id/topcard"
            android:layout_alignParentLeft="true"

            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@drawable/salon" />
    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topcard"
            android:layout_margin="25dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/heading1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/beauty_spa"
                    android:padding="5dp"
                    android:textColor="@color/red_500"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="387dp"
                    android:layout_height="256dp"
                    android:layout_below="@+id/heading1"
                    android:layout_marginTop="-9dp"
                    android:padding="15dp"
                    android:layout_margin="3dp"
                    android:text="@string/topic1"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card2"
            android:layout_margin="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/heading2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="Why Beauty  Spa from Serve on Door"
                    android:textColor="@color/red_500"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading2"
                    android:gravity="left"
                    android:textSize="15sp"
                    android:layout_margin="3dp"
                    android:padding="15dp"
                    android:text="@string/topic2" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card3"
        android:layout_margin="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center_horizontal"
                android:text=" How It Works"
                android:textColor="@color/red_500"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading3"
                android:gravity="left"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:text="@string/topic3" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card4"
        android:layout_margin="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center_horizontal"
                android:text="Attention"
                android:textColor="@color/red_500"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading4"
                android:gravity="left"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:text="@string/topic4" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="click here to book"
        android:id="@+id/submit"
        android:layout_below="@id/card5"
        android:onClick="submit"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>



</RelativeLayout>




</ScrollView>